<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:background="@color/dialog_content_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_titile"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@color/dialog_title_bg"
            android:gravity="center"
            android:text="@string/app_add_title"
            android:textSize="@dimen/app_add_titlesize" />

        <ImageView
            android:id="@+id/bt_cancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignRight="@id/tv_titile"
            android:src="@mipmap/activity_home_add_cancel" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/activity_home_add_apk_icon" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_item1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/dialog_add_text_bg"
                android:text="@string/app_add_appname"
                android:textSize="@dimen/app_add_textsize" />

            <TextView
                android:id="@+id/tv_appname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:paddingLeft="50dp"
                android:singleLine="true"
                android:textSize="@dimen/app_add_textsize" />

            <TextView
                android:id="@+id/tv_item2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item1"
                android:layout_marginTop="3dp"
                android:background="@color/dialog_add_text_bg"
                android:text="@string/app_add_packname"
                android:textSize="@dimen/app_add_textsize" />

            <TextView
                android:id="@+id/tv_packname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item1"
                android:layout_marginTop="3dp"
                android:paddingLeft="35dp"
                android:singleLine="true"
                android:textSize="@dimen/app_add_textsize" />

            <TextView
                android:id="@+id/tv_item3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item2"
                android:layout_marginTop="3dp"
                android:background="@color/dialog_add_text_bg"
                android:text="@string/app_add_classify"
                android:textSize="@dimen/app_add_textsize" />

            <TextView
                android:id="@+id/tv_classify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item2"
                android:layout_marginTop="3dp"
                android:paddingLeft="35dp"
                android:singleLine="true"
                android:text="精品"
                android:textSize="@dimen/app_add_textsize" >
            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignRight="@id/tv_item3"
                android:layout_below="@id/tv_item2"
                android:layout_marginTop="3dp"
                android:paddingLeft="35dp"
                android:src="@mipmap/activity_home_add_classify" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lr_remarks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/app_add_remarks"
            android:textSize="@dimen/app_add_textsize" />

        <EditText
            android:id="@+id/et_remarks"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:background="@color/dialog_add_text_bg"
            android:gravity="top|left"
            android:padding="3dp" />
    </LinearLayout>

    <include
        android:id="@+id/lr_addlayout"
        layout="@layout/dialog_item_add_apps" />

    <include
        android:id="@+id/lr_watchlayout"
        layout="@layout/dialog_item_watch_apps" />

</LinearLayout>